Fix text getting cut off for article index items, and make flex for feed index and article index to be centered

--- a/app/assets/stylesheets/06_feed_index.scss
+++ b/app/assets/stylesheets/06_feed_index.scss
@@ -12,6 +12,7 @@ $button-hover-green: #05A838;
 div.feed-index {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   padding: 20px;
   margin: 10px;
 }
